PythonSyntaxCheckerParser.py
# Generated from PythonSyntaxChecker.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonSyntaxCheckerParser ( Parser ):

    grammarFileName = "PythonSyntaxChecker.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'lambda'", "':'", "'):'", 
                     "'{'", "'}'", "','", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'^='", "'**='", "'//='", "'in'", "'not in'", 
                     "'is'", "'is not'", "'and'", "'or'", "'not'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'break'", "';'", 
                     "'continue'", "'pass'", "'print'", "'if'", "'elif'", 
                     "'else'", "'while'", "'for'", "'def'", "'return'", 
                     "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", 
                     "'^'", "'//'", "'&'", "'|'", "'~'", "'<<'", "'>>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "OP_ADD", "OP_SUB", "OP_MUL", "OP_DIV", 
                      "OP_MOD", "OP_EXP", "OP_XOR", "OP_FLOOR_DIV", "BITWISE_AND", 
                      "BITWISE_OR", "BITWISE_NOT", "BITWISE_SHIFT_LEFT", 
                      "BITWISE_SHIFT_RIGHT", "ID", "BOOL", "INT", "FLOAT", 
                      "STRING", "WS", "NEWLINE", "INDENT", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_prog = 0
    RULE_expr = 1
    RULE_number = 2
    RULE_lambda = 3
    RULE_def = 4
    RULE_paramList = 5
    RULE_funcCall = 6
    RULE_argList = 7
    RULE_statement = 8
    RULE_literal = 9
    RULE_assignmentOperator = 10
    RULE_membershipOperator = 11
    RULE_identityOperator = 12
    RULE_logicOperators = 13
    RULE_comparisonOperator = 14
    RULE_stat = 15
    RULE_assignStat = 16
    RULE_exprStat = 17
    RULE_ifStat = 18
    RULE_whileStat = 19
    RULE_forStat = 20
    RULE_funcDef = 21
    RULE_returnStat = 22
    RULE_setAssignment = 23
    RULE_operator = 24
    RULE_setLiteral = 25
    RULE_dictLiteral = 26
    RULE_listLiteral = 27
    RULE_tupleLiteral = 28
    RULE_otherStatement = 29

    ruleNames =  [ "prog", "expr", "number", "lambda", "def", "paramList", 
                   "funcCall", "argList", "statement", "literal", "assignmentOperator", 
                   "membershipOperator", "identityOperator", "logicOperators", 
                   "comparisonOperator", "stat", "assignStat", "exprStat", 
                   "ifStat", "whileStat", "forStat", "funcDef", "returnStat", 
                   "setAssignment", "operator", "setLiteral", "dictLiteral", 
                   "listLiteral", "tupleLiteral", "otherStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    OP_ADD=45
    OP_SUB=46
    OP_MUL=47
    OP_DIV=48
    OP_MOD=49
    OP_EXP=50
    OP_XOR=51
    OP_FLOOR_DIV=52
    BITWISE_AND=53
    BITWISE_OR=54
    BITWISE_NOT=55
    BITWISE_SHIFT_LEFT=56
    BITWISE_SHIFT_RIGHT=57
    ID=58
    BOOL=59
    INT=60
    FLOAT=61
    STRING=62
    WS=63
    NEWLINE=64
    INDENT=65
    COMMENT=66
    MULTILINE_COMMENT=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.ExprContext,0)


        def EOF(self):
            return self.getToken(PythonSyntaxCheckerParser.EOF, 0)

        def getRuleIndex(self):
            return PythonSyntaxCheckerParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PythonSyntaxCheckerParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.expr(0)
            self.state = 61
            self.match(PythonSyntaxCheckerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonSyntaxCheckerParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class VariableExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSyntaxCheckerParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PythonSyntaxCheckerParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableExpr" ):
                listener.enterVariableExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableExpr" ):
                listener.exitVariableExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableExpr" ):
                return visitor.visitVariableExpr(self)
            else:
                return visitor.visitChildren(self)


    class InfixExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSyntaxCheckerParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSyntaxCheckerParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonSyntaxCheckerParser.ExprContext,i)

        def OP_XOR(self):
            return self.getToken(PythonSyntaxCheckerParser.OP_XOR, 0)
        def OP_ADD(self):
            return self.getToken(PythonSyntaxCheckerParser.OP_ADD, 0)
        def OP_SUB(self):
            return self.getToken(PythonSyntaxCheckerParser.OP_SUB, 0)
        def OP_MUL(self):
            return self.getToken(PythonSyntaxCheckerParser.OP_MUL, 0)
        def OP_DIV(self):
            return self.getToken(PythonSyntaxCheckerParser.OP_DIV, 0)
        def BITWISE_AND(self):
            return self.getToken(PythonSyntaxCheckerParser.BITWISE_AND, 0)
        def BITWISE_OR(self):
            return self.getToken(PythonSyntaxCheckerParser.BITWISE_OR, 0)
        def BITWISE_NOT(self):
            return self.getToken(PythonSyntaxCheckerParser.BITWISE_NOT, 0)
        def BITWISE_SHIFT_LEFT(self):
            return self.getToken(PythonSyntaxCheckerParser.BITWISE_SHIFT_LEFT, 0)
        def BITWISE_SHIFT_RIGHT(self):
            return self.getToken(PythonSyntaxCheckerParser.BITWISE_SHIFT_RIGHT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfixExpr" ):
                listener.enterInfixExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfixExpr" ):
                listener.exitInfixExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfixExpr" ):
                return visitor.visitInfixExpr(self)
            else:
                return visitor.visitChildren(self)


    class LambdaExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSyntaxCheckerParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def lambda_(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.LambdaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambdaExpr" ):
                listener.enterLambdaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambdaExpr" ):
                listener.exitLambdaExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaExpr" ):
                return visitor.visitLambdaExpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSyntaxCheckerParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def number(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.NumberContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberExpr" ):
                return visitor.visitNumberExpr(self)
            else:
                return visitor.visitChildren(self)


    class FuncCallExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSyntaxCheckerParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcCall(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.FuncCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCallExpr" ):
                listener.enterFuncCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCallExpr" ):
                listener.exitFuncCallExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCallExpr" ):
                return visitor.visitFuncCallExpr(self)
            else:
                return visitor.visitChildren(self)


    class DefExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSyntaxCheckerParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def def_(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.DefContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefExpr" ):
                listener.enterDefExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefExpr" ):
                listener.exitDefExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefExpr" ):
                return visitor.visitDefExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSyntaxCheckerParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonSyntaxCheckerParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = PythonSyntaxCheckerParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 64
                self.match(PythonSyntaxCheckerParser.T__0)
                self.state = 65
                self.expr(0)
                self.state = 66
                self.match(PythonSyntaxCheckerParser.T__1)
                pass

            elif la_ == 2:
                localctx = PythonSyntaxCheckerParser.VariableExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 68
                self.match(PythonSyntaxCheckerParser.ID)
                pass

            elif la_ == 3:
                localctx = PythonSyntaxCheckerParser.NumberExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                self.number()
                pass

            elif la_ == 4:
                localctx = PythonSyntaxCheckerParser.LambdaExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 70
                self.lambda_()
                pass

            elif la_ == 5:
                localctx = PythonSyntaxCheckerParser.DefExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.def_()
                pass

            elif la_ == 6:
                localctx = PythonSyntaxCheckerParser.FuncCallExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.funcCall()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 87
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = PythonSyntaxCheckerParser.InfixExprContext(self, PythonSyntaxCheckerParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 75
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 76
                        localctx.op = self.match(PythonSyntaxCheckerParser.OP_XOR)
                        self.state = 77
                        localctx.right = self.expr(11)
                        pass

                    elif la_ == 2:
                        localctx = PythonSyntaxCheckerParser.InfixExprContext(self, PythonSyntaxCheckerParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 78
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 79
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==45 or _la==46):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 80
                        localctx.right = self.expr(10)
                        pass

                    elif la_ == 3:
                        localctx = PythonSyntaxCheckerParser.InfixExprContext(self, PythonSyntaxCheckerParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 81
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 82
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==47 or _la==48):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 83
                        localctx.right = self.expr(9)
                        pass

                    elif la_ == 4:
                        localctx = PythonSyntaxCheckerParser.InfixExprContext(self, PythonSyntaxCheckerParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 84
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 85
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 279223176896970752) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 86
                        localctx.right = self.expr(8)
                        pass

             
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(PythonSyntaxCheckerParser.INT, 0)

        def FLOAT(self):
            return self.getToken(PythonSyntaxCheckerParser.FLOAT, 0)

        def getRuleIndex(self):
            return PythonSyntaxCheckerParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = PythonSyntaxCheckerParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==60 or _la==61):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonSyntaxCheckerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonSyntaxCheckerParser.RULE_lambda

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambda" ):
                listener.enterLambda(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambda" ):
                listener.exitLambda(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambda" ):
                return visitor.visitLambda(self)
            else:
                return visitor.visitChildren(self)




    def lambda_(self):

        localctx = PythonSyntaxCheckerParser.LambdaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lambda)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(PythonSyntaxCheckerParser.T__2)
            self.state = 95
            self.match(PythonSyntaxCheckerParser.ID)
            self.state = 96
            self.match(PythonSyntaxCheckerParser.T__3)
            self.state = 97
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonSyntaxCheckerParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.ParamListContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSyntaxCheckerParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonSyntaxCheckerParser.StatContext,i)


        def getRuleIndex(self):
            return PythonSyntaxCheckerParser.RULE_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef" ):
                listener.enterDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef" ):
                listener.exitDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDef" ):
                return visitor.visitDef(self)
            else:
                return visitor.visitChildren(self)




    def def_(self):

        localctx = PythonSyntaxCheckerParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(PythonSyntaxCheckerParser.ID)
            self.state = 100
            self.match(PythonSyntaxCheckerParser.T__0)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==58:
                self.state = 101
                self.paramList()


            self.state = 104
            self.match(PythonSyntaxCheckerParser.T__4)
            self.state = 105
            self.match(PythonSyntaxCheckerParser.T__5)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3747003267305963530) != 0):
                self.state = 106
                self.stat()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(PythonSyntaxCheckerParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSyntaxCheckerParser.ID)
            else:
                return self.getToken(PythonSyntaxCheckerParser.ID, i)

        def getRuleIndex(self):
            return PythonSyntaxCheckerParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = PythonSyntaxCheckerParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(PythonSyntaxCheckerParser.ID)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 115
                self.match(PythonSyntaxCheckerParser.T__7)
                self.state = 116
                self.match(PythonSyntaxCheckerParser.ID)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonSyntaxCheckerParser.ID, 0)

        def argList(self):
            return self.getTypedRuleContext(PythonSyntaxCheckerParser.ArgListContext,0)


        def getRuleIndex(self):
            return PythonSyntaxCheckerParser.RULE_funcCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCall" ):
                listener.enterFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCall" ):
                listener.exitFuncCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCall" ):
                return visitor.visitFuncCall(self)
            else:
                return visitor.visitChildren(self)




    def funcCall(self):

        localctx = PythonSyntaxCheckerParser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PythonSyntaxCheckerParser.ID)
            self.state = 123
            self.match(PythonSyntaxCheckerParser.T__0)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3746994889972252682) != 0):
                self.state = 124
                self.argList()


            self.state = 127
            self.match(PythonSyntaxCheckerParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSyntaxCheckerParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonSyntaxCheckerParser.ExprContext,i)


        def getRuleIndex(self):
            return PythonSyntaxCheckerParser.RULE_argList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgList" ):
                listener.enterArgList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgList" ):
                listener.exitArgList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):
